<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragment.InventoryDetailFragment">
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline47"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.05109489"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline57"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.33"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline56"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline54"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline55"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline58"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline59"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.23"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline60"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.31"/>
    <TextView
            android:text="@string/inventory_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView22"
            app:layout_constraintBottom_toTopOf="@+id/guideline55"
            app:layout_constraintTop_toTopOf="@+id/guideline55"
            app:layout_constraintStart_toStartOf="@+id/guideline47"
            app:layout_constraintEnd_toStartOf="@+id/guideline54" android:textSize="@dimen/top_text_size"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/goods_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView23"
            app:layout_constraintEnd_toStartOf="@+id/guideline57"
            app:layout_constraintStart_toStartOf="@+id/guideline47"
            app:layout_constraintTop_toTopOf="@+id/guideline58" app:layout_constraintBottom_toTopOf="@+id/guideline58"
            android:textSize="@dimen/normal_size" android:textStyle="bold"/>
    <TextView
            android:text="@string/goods_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView24"
            app:layout_constraintStart_toStartOf="@+id/guideline47"
            app:layout_constraintEnd_toStartOf="@+id/guideline57"
            app:layout_constraintBottom_toTopOf="@+id/guideline59" app:layout_constraintTop_toTopOf="@+id/guideline59"
            android:textSize="@dimen/normal_size" android:textStyle="bold"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView25"
            app:layout_constraintStart_toStartOf="@+id/guideline57"
            app:layout_constraintEnd_toStartOf="@+id/guideline54" app:layout_constraintTop_toTopOf="@+id/guideline58"
            app:layout_constraintBottom_toTopOf="@+id/guideline58" android:textSize="@dimen/normal_size"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/guideline57"
            app:layout_constraintEnd_toStartOf="@+id/guideline54" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/guideline59" app:layout_constraintBottom_toTopOf="@+id/guideline59"
            android:background="@android:drawable/editbox_dropdown_light_frame"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/guideline47"
            app:layout_constraintEnd_toStartOf="@+id/guideline54" app:layout_constraintTop_toTopOf="@+id/guideline60"
            app:layout_constraintBottom_toTopOf="@+id/guideline60"
            android:background="@android:drawable/picture_frame"/>
</androidx.constraintlayout.widget.ConstraintLayout>